# navigator-document-parser

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.aws.example  Dockerfile.local.example  Makefile  README.md  pyproject.toml  requirements.txt  results_viewer.py  run.sh  run_parsers.py  ~
.github/: dependabot.yml  retag-and-push.sh
.github/workflows/: ci.yml  main-push-checks.yml  semver.yml
cli/: parse_htmls.py  parse_no_content_type.py  parse_pdfs.py  run.sh  run_parser.py  translate_outputs.py  warm_up_model.py
cli/test/: conftest.py  test_run_parser.py
cli/test/test_data/azure_api_response_cache/test_pdf/: 1743073555298253000.json
cli/test/test_data/input/: 1_3.json  test_html.json  test_no_content_type.json  test_pdf.json
cli/test/test_data/output/: test_html.json
cmd/: run_parser.py
notebooks/: generate-debugging-set.ipynb  generate_stratified.ipynb  query_results-2022-06-22_54044.csv  test_labels.ipynb
src/: base.py  combined.py  config.py  get_data.py  newsplease.py  readability.py  trafilatura.py  utils.py
src/html_parser/: base.py  combined.py  newsplease.py  readability.py
src/html_parser/test/: test_parsers.py  test_readability_parser.py
src/job_queue/: main.py  message_wrapper.py  queue_wrapper.py
src/pdf_parser/: azure_wrapper.py  combine.py  config.py  google_ai.py  layout.py  utils.py
src/pdf_parser/pdf_utils/: base.py  disambiguate_layout.py  google_ocr.py  layout_parser_layout.py  ocr.py  ocr_processing.py  parsing_utils.py  postprocess_layout.py  utils.py
src/pdf_parser/pdf_utils/disambiguator/: nested.py  overlapping.py  pipeline.py  unexplained.py  utils.py
src/pdf_parser/pdf_utils/disambiguator/tests/: conftest.py  test_nested.py  test_overlapping.py  test_pipeline.py  test_unexplained.py  test_utils.py
src/pdf_parser/test/: test_disambiguate_layout.py  test_parsing_utils.py  test_postprocess_layout.py  testing_utils.py
src/pdf_parser/tests/: conftest.py  test_azure_wrapper.py  test_utils.py
src/test/: test_parsers.py  test_readability_parser.py
src/translator/: translate.py
src/translator/test/: test_translate.py
