[tool.poetry]
name = "navigator-document-parser"
version = "0.1.0"
description = "Parsing PDFs and websites containing laws and policies"
authors = ["CPR Tech <tech@climatepolicyradar.org>"]
packages = [
  { include = "**/*.py", from = "src", to = "navigator_document_parser" },
]


[tool.poetry.dependencies]
python = ">=3.10,<4.0"
awscli = "^1.33.33"
news-please = "^1.5.48"
pandas = "^2.2.2"
numpy = "^2.0.0"
tqdm = "^4.64.1"
pydantic = "^2.4.0"
click = "^8.1.3"
langdetect = "^1.0.9"
playwright = "^1.35.0"
readability-lxml = "^0.8.1"
bleach = "^6.1.0"
python-json-logger = "^2.0.4"
cloudpathlib = { extras = ["s3"], version = "^0.18.1" }
PyMuPDF = "^1.20.2"
google-cloud-translate = "^3.8.2"
psutil = "^6.0.0"
multiprocessing-logging = "^0.3.3"
json-logging = "^1.3.0"
tenacity = "^8.2.1"
pillow = "^10.4.0"                                                                                            # to fix import of Image.LINEAR by dependency
azure-ai-formrecognizer = "^3.2.1"
mock = "^5.1.0"
pypdf2 = "^3.0.1"
azure-pdf-parser = { git = "https://github.com/climatepolicyradar/azure-pdf-parser.git", tag = "v0.4.1" }
lxml = {extras = ["html-clean"], version = "^5.2.2"}

[tool.poetry.dev-dependencies]
pre-commit = "^3.7.1"
pyright = "^1.1.374"
pytest = "^8.3.1"
black = "^24.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pydocstyle]
# D100 - Missing docstring in public module
# D103 - Missing docstring in public function
# D104 - Missing docstring in public package
# D107 - Missing docstring in __init__
# D202 - No blank lines allowed after function docstring
# D203 - 1 blank line required before class docstring
# D212 - Multi-line docstring summary should start at the first line
# D213 - Multi-line docstring summary should start at the second line
# D400 - First line should end with a period
# D401 - First line should be in imperative mood (Google styleguide denotes 'descriptive' style.)
# D406 - Section name should end with a newline (incompatible with Google styleguide)
# D407 - Missing dashed underline after section (incompatible with Google styleguide)
# D413 - Missing blank line after last section (incompatible with Google styleguide)
# D415 - First line should end with a period, question mark, or exclamation point
ignore = """
D100,D103,D104,D107,
D202,D203,D212,D213,
D400,D401,D406,D407,D413,D415
"""

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"

[tool.black]
line-length = 88
target-version = ['py39']
