[tool.poetry]
name = "navigator-document-parser"
version = "0.1.0"
description = "Parsing PDFs and websites containing laws and policies"
authors = ["CPR Tech <tech@climatepolicyradar.org>"]
packages = [
  { include = "**/*.py", from = "src", to = "navigator_document_parser" },
]


[tool.poetry.dependencies]
python = ">=3.10,<4.0"
awscli = "^1.37.11"
news-please = "^1.5.48"
pandas = "^2.2.3"
numpy = "^1.26.4"
tqdm = "^4.67.1"
pydantic = "^2.10.6"
click = "^8.1.8"
langdetect = "^1.0.9"
playwright = "^1.49.1"
readability-lxml = "^0.8.1"
bleach = "^6.2.0"
python-json-logger = "^3.2.1"
cloudpathlib = { extras = ["s3"], version = "^0.20.0" }
PyMuPDF = "^1.25.2"
google-cloud-translate = "^3.19.0"
psutil = "^6.1.1"
multiprocessing-logging = "^0.3.3"
json-logging = "^1.3.0"
tenacity = "^9.0.0"
pillow = "^11.1.0"                                                                                            # to fix import of Image.LINEAR by dependency
azure-ai-formrecognizer = "^3.2.1"
mock = "^5.1.0"
pypdf2 = "^3.0.1"
azure-pdf-parser = { git = "https://github.com/climatepolicyradar/azure-pdf-parser.git", tag = "v0.4.3" }
lxml = {extras = ["html-clean"], version = "^5.2.2"}

[tool.poetry.dev-dependencies]
pre-commit = "^4.1.0"
pyright = "^1.1.393"
pytest = "^8.3.4"
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pydocstyle]
# D100 - Missing docstring in public module
# D103 - Missing docstring in public function
# D104 - Missing docstring in public package
# D107 - Missing docstring in __init__
# D202 - No blank lines allowed after function docstring
# D203 - 1 blank line required before class docstring
# D212 - Multi-line docstring summary should start at the first line
# D213 - Multi-line docstring summary should start at the second line
# D400 - First line should end with a period
# D401 - First line should be in imperative mood (Google styleguide denotes 'descriptive' style.)
# D406 - Section name should end with a newline (incompatible with Google styleguide)
# D407 - Missing dashed underline after section (incompatible with Google styleguide)
# D413 - Missing blank line after last section (incompatible with Google styleguide)
# D415 - First line should end with a period, question mark, or exclamation point
ignore = """
D100,D103,D104,D107,
D202,D203,D212,D213,
D400,D401,D406,D407,D413,D415
"""

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"

[tool.black]
line-length = 88
target-version = ['py39']
